Animations fade-in, fleur, effet de parallax logo/vidéo avec le logo flottant, et rajout de la section des oscars

--- a/wp-content/themes/foce-child/css/index.css
+++ b/wp-content/themes/foce-child/css/index.css
@@ -1,16 +1,183 @@
-@keyframes fadeInUp{from{opacity:0;transform:translateY(80px)}to{opacity:1;transform:translateY(0)}}
-.fade-in-section{animation-name:fadeInUp;animation-duration:1s;animation-fill-mode:forwards}
-h2.title-background{position:relative;margin-top:30px}
-h2.title-background>span{display:block;background-repeat:no-repeat;background-size:contain;text-align:center;background-position:center}
-h2.title-background::before{position:absolute;top:120px;left:-416px}
-h2.title-background::after{position:absolute;top:377px;left:-372.5px;z-index:2}@keyframes flowerRotate{from{transform:rotate(0deg)}to{transform:rotate(360deg)}}
-.story__article::before{position:absolute;left:722px;top:208px;z-index:1}
-.story__article::after{position:absolute;right:90px;top:122px;z-index:2;animation:flowerRotate infinite 10s linear}
-#studio{position:relative}
-#studio h2::after{position:absolute;left:1217px;top:107px}
-#studio h2::before{position:absolute;left:-68px;top:0}
-.descriptive-text{position:relative;max-width:729px;min-height:399px;margin-left:216px}
-.descriptive-text__img{width:100%;height:450px}
-.descriptive-text::after{content:"";position:absolute;top:173px;left:119px;border-radius:15px;width:513px;height:99px;background:linear-gradient(to left, rgba(255, 80, 0, 0.04), rgba(255, 165, 0, 0) 20%, rgba(255, 165, 0, 0) 80%, rgba(238, 84, 16, 0.06)),linear-gradient(rgba(255, 85, 0, 0), rgba(255, 79, 0, 0) 50%, rgba(248, 72, 8, 0.06));z-index:1}
-.descriptive-text__span{position:absolute;top:182px;left:122px;font-family:"Quicksand",sans-serif;font-weight:bold;color:#fff5e9;font-size:30px;line-height:35px;text-shadow:2px 2px 4px rgba(0,0,0,.5);z-index:2}
-.site-footer::before{position:absolute;left:1px;bottom:1px}/*# sourceMappingURL=index.css.map */
+@charset "UTF-8";
+/* Fleur qui tourne en continu */
+@keyframes flowerRotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+.story__article::before {
+  position: absolute;
+  left: 722px;
+  top: 208px;
+  z-index: 1;
+}
+.story__article::after {
+  content: "";
+  position: absolute;
+  left: 1137px;
+  top: 122px;
+  width: 188px;
+  height: 188px;
+  background-image: url(../images/Hibiscus.png);
+  z-index: 2;
+  animation: flowerRotate infinite 10s linear;
+}
+
+#studio {
+  position: relative;
+}
+#studio h2 {
+  background-image: url(../images/purple_studio_bg.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+#studio h2::after {
+  position: absolute;
+  left: 1217px;
+  top: 107px;
+}
+#studio h2::before {
+  position: absolute;
+  left: -68px;
+  top: 0;
+}
+
+.site-footer::before {
+  display: none;
+}
+
+.site-footer::after {
+  display: none;
+}
+
+@font-face {
+  font-family: "Gotham";
+  src: url("../fonts/Gotham-Light.otf") format("opentype");
+}
+#festival-nomination {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 0;
+}
+#festival-nomination .descriptive-text {
+  max-width: 729px;
+  min-height: 399px;
+  margin-left: 216px;
+  position: relative;
+}
+#festival-nomination .descriptive-text::before {
+  content: "";
+  width: 170px;
+  height: 170px;
+  position: absolute;
+  top: 19px;
+  left: -78px;
+  background-image: url(../images/Sunflower.png);
+  background-size: cover;
+}
+#festival-nomination .descriptive-text::after {
+  content: "";
+  width: 172px;
+  height: 168px;
+  position: absolute;
+  top: -18px;
+  right: -551px;
+  background-image: url(../images/orchid.png);
+  background-size: cover;
+}
+#festival-nomination .descriptive-text__img {
+  width: 100%;
+  height: auto;
+  margin-top: 150px;
+}
+#festival-nomination .descriptive-text__span {
+  position: absolute;
+  top: 199px;
+  left: 67px;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 53px;
+  letter-spacing: -0.02em;
+  text-align: left;
+  font-family: "Quicksand", sans-serif;
+  color: #FFF5E9;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+#festival-nomination .logo-oscar {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+#festival-nomination .logo-oscar__img {
+  position: absolute;
+  bottom: -100px;
+  right: 179px;
+  width: 300px;
+  height: 128px;
+}
+
+/* Appliquer le fade-up aux sections */
+@keyframes fadeInUp {
+  from {
+    transform: translateY(120px);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
+.fade-in-section {
+  animation: fadeInUp 2s forwards 0.4s ease-out;
+}
+
+/* Appliquer un effet de parallax avec l'image de la bannière et le logo */
+/*.banner {
+  position:relative;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+.banner img {
+  position: absolute;
+  top: 0;
+  left: 0;
+} */
+/* Integrer la video dans le header et la personnaliser */
+.hero-header {
+  position: relative;
+  width: 100%;
+  min-height: 806px;
+  overflow: hidden;
+}
+.hero-header #background-video {
+  position: relative; /* Assure que la vidéo reste en arrière-plan */
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+.hero-header .hero-logo {
+  position: absolute;
+  top: 40px;
+  left: 303px;
+  animation: float 1.5s ease-in-out infinite alternate;
+}
+
+/* Flottement du titre dans la vidéo de la bannière */
+@keyframes float {
+  from {
+    transform: translateY(50px);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
+
+/*# sourceMappingURL=index.css.map */
