--- a/wp-content/themes/foce-child/scss/index.scss
+++ b/wp-content/themes/foce-child/scss/index.scss
@@ -1,2 +1,2 @@
 // index.scss
-@import 'animations'; // Pas besoin d'ajouter le préfixe "_" ou l'extension ".scss"
+@import './animations'; // Pas besoin d'ajouter le préfixe "_" ou l'extension ".scss"
