--- a/wp-content/themes/foce-child/scss/_animations.scss
+++ b/wp-content/themes/foce-child/scss/_animations.scss
@@ -32,8 +32,6 @@
   }
 }
 
-
-
 #studio {
   position: relative;
 
@@ -56,12 +54,8 @@
   }
 }
 
-.site-footer::before {
+.site-footer::before,.site-footer::after {
   display:none;
-}
-
-.site-footer::after{
-  display: none;
 }
 
 // DECLARATION POLICE GOTHAM
@@ -144,11 +138,6 @@
   }
 }
 
-
-
-
-
-
 /* Appliquer le fade-up aux sections */
 
 @keyframes fadeInUp {
@@ -186,25 +175,38 @@
 
 .hero-header {
   position: relative;
-  width: 100%;
-  min-height: 806px;
+  height: 806px;
   overflow: hidden;
- 
-#background-video {
-  position: relative;  /* Assure que la vidéo reste en arrière-plan */
 
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-}
+  // Style de la vidéo de fond
+  &__video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1; // Assure que la vidéo reste derrière tout autre contenu
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 
-.hero-logo {
-  position: absolute;
-  top: 40px;
-  left: 303px;
-  animation: float 1.5s ease-in-out infinite alternate;
-}
+
+    @media (max-width: 767px) {
+      display: none; // Cache la vidéo sur les petits écrans
+    }
+  }
+
+  // Style pour le logo central
+  &__hero-logo {
+    position: absolute;
+    top: 40px;
+    left: 303px;
+    transform: translate(-50%, -50%); // Centre le logo
+    z-index: 1; // Assure que le logo est visible
+    animation: float 1.5s ease-in-out infinite alternate; // Applique l'animation de flottement
+  }
 }
 
 /* Flottement du titre dans la vidéo de la bannière */
@@ -215,4 +217,184 @@
 }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// Adapte le style pour les petits écrans
+@media (max-width: 767px) {
+
+  .hero-header {
+    position: relative;
+    max-width:100%;
+    height: auto;
+    overflow: hidden;
+
+    video{
+      display: none;
+    }
+
+    img.fallback-image{
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    }
+
+    img.hero-header__hero-logo{
+    animation: none; // Annule l'animation sur les petits écrans pour éviter les distractions
+    width: 82vw;
+    height: auto;
+    min-width: 250px;
+    max-width: 600px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.8);
+    }
+}
+
+#story {
+
+  h2 {
+    font-size: 29px;
+    margin-top: 20px;
+
+    &::before,&::after{
+      display: none;
+    }
+  }
+
+  .story__article {
+    &::before,&::after{
+      display: none;
+    }
+  }
+
+  #characters{
+    margin: 0;
+
+  .main-character{
+    h3{
+      font-size: 29px;
+      line-height: 28px;
+    }
+  }
+}
+
+  #place{
+    
+    div{
+      h3{
+        font-size: 29px;
+      }
+    }
+  }
+}
+  
+#studio{
+  
+  h2{
+    font-size: 29px;
+    line-height: 28px;
+
+    &::before,&::after{
+      display: none;
+    }
+  }
+
+  div{
+    &::before{
+      display: none;
+    }
+  }
+}
+
+#festival-nomination {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  /* align-items: center; */
+  margin: 20px 0;
+
+  .descriptive-text{
+
+    position: relative;
+    margin:0;
+
+    &::before{
+      content: "";
+    width: 130px;
+    height: 130px;
+    position: absolute;
+    top: 25px;
+    left: 14px;
+    background-image: url(../images/Sunflower.png);
+    background-size: cover;
+    }
+
+    &::after{
+      content: "";
+      width: 110px;
+      height: 110px;
+      position: absolute;
+      top: 585px;
+      right: 0;
+      /* z-index: -1; */
+      background-image: url(../images/orchid.png);
+      background-size: cover;
+    }
+
+    img{
+        margin-top:230px;
+        height: 176px;
+    }
+
+    span{
+      position: absolute;
+      top: 272px;
+      left: 20px;
+      text-align: center;
+      font-size: 19px;
+      line-height: 28px;
+      font-weight: 700;
+      letter-spacing: -0.02em;   
+      font-family: "Quicksand", sans-serif;
+      color: #FFF5E9;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    }
+
+  }
+
+  .logo-oscar{
+    
+    img{
+    width: 250px;
+    height: 107px;
+    position: unset;
+    
+      }
+    }
+  }
+
+  // Désactive toutes les animations dans les sections qui utilisent la classe .fade-in-section
+  .fade-in-section {
+    animation: none;
+  }
+}
+
+@media (min-width: 768px) {
+  img.fallback-image {
+    display: none; // Cache l'image de fallback sur les écrans plus larges
+  }
+}
 
