--- a/wp-content/themes/foce-child/scss/_animations.scss
+++ b/wp-content/themes/foce-child/scss/_animations.scss
@@ -1,3 +1,64 @@
+/* Appliquer le fade-up aux sections */
+
+@keyframes fadeInUp {
+  from {
+    
+    transform: translateY(120px);
+  }
+  to {
+    
+    transform: translateY(0);
+  }
+}
+
+.fade-in-section {
+  animation: fadeInUp 2s forwards 0.4s ease-out;
+}
+
+/* Integrer la video dans le header et la personnaliser */
+
+.hero-header {
+  position: relative;
+  height: 806px;
+  overflow: hidden;
+
+  // Style de la vidéo de fond
+  &__video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1; // Assure que la vidéo reste derrière tout autre contenu
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+
+
+    @media (max-width: 767px) {
+      display: none; // Cache la vidéo sur les petits écrans
+    }
+  }
+
+  // Style pour le logo central
+  &__hero-logo {
+    position: absolute;
+    top: 40px;
+    left: 303px;
+    transform: translate(-50%, -50%); // Centre le logo
+    z-index: 1; // Assure que le logo est visible
+    animation: float 1.5s ease-in-out infinite alternate; // Applique l'animation de flottement
+  }
+}
+
+/* Flottement du titre dans la vidéo de la bannière */
+
+@keyframes float {
+  from { transform: translateY(50px); }
+  to { transform: translateY(0); }
+}
 
 /* Fleur qui tourne en continu */
 
@@ -64,11 +125,12 @@
   src: url('../fonts/Gotham-Light.otf') format('opentype');
 }
 
+/* SECTION DES OSCARS */
 #festival-nomination {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 20px 0; // Ajustez selon vos besoins
+  margin: 20px 0;
 
   .descriptive-text { 
     max-width: 729px;
@@ -138,22 +200,7 @@
   }
 }
 
-/* Appliquer le fade-up aux sections */
 
-@keyframes fadeInUp {
-  from {
-    
-    transform: translateY(120px);
-  }
-  to {
-    
-    transform: translateY(0);
-  }
-}
-
-.fade-in-section {
-  animation: fadeInUp 2s forwards 0.4s ease-out;
-}
 
 /* Appliquer un effet de parallax avec l'image de la bannière et le logo */
 
@@ -171,50 +218,7 @@
   left: 0;
 } */
 
-/* Integrer la video dans le header et la personnaliser */
 
-.hero-header {
-  position: relative;
-  height: 806px;
-  overflow: hidden;
-
-  // Style de la vidéo de fond
-  &__video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1; // Assure que la vidéo reste derrière tout autre contenu
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-
-
-    @media (max-width: 767px) {
-      display: none; // Cache la vidéo sur les petits écrans
-    }
-  }
-
-  // Style pour le logo central
-  &__hero-logo {
-    position: absolute;
-    top: 40px;
-    left: 303px;
-    transform: translate(-50%, -50%); // Centre le logo
-    z-index: 1; // Assure que le logo est visible
-    animation: float 1.5s ease-in-out infinite alternate; // Applique l'animation de flottement
-  }
-}
-
-/* Flottement du titre dans la vidéo de la bannière */
-
-@keyframes float {
-  from { transform: translateY(50px); }
-  to { transform: translateY(0); }
-}
 
 
 
