--- a/wp-content/themes/foce-child/scss/index.scss
+++ b/wp-content/themes/foce-child/scss/index.scss
@@ -1,4 +1,4 @@
 // index.scss
 @import './animations'; // Pas besoin d'ajouter le préfixe "_" ou l'extension ".scss"
 @import './characters-carousel';
-@import './section-lieu-mouvement-nuage'
+@import './section-lieu-mouvement-nuage';
