--- a/wp-content/themes/foce-child/scss/_section-lieu-mouvement-nuage.scss
+++ b/wp-content/themes/foce-child/scss/_section-lieu-mouvement-nuage.scss
@@ -1,47 +1,44 @@
-#place {
-    position: relative;
-    overflow: hidden; // Pour empêcher les nuages de déborder
-    height: 500px; // Définissez la hauteur désirée
-    max-width: 1473px;
-    margin-left: 0;
-    margin-right: 0;
+#story{ 
 
+article#place {
+    
     .parallax-background {
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
       position: relative;
-  
-      img {
+      width: 1473px;
+      height: 699px;
+      overflow: hidden;
+      
+
+      img{
         width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-    }
-  
-    .nuage {
-      position: absolute;
-      top: 10px; // Ajustez selon l'emplacement initial des nuages
-      transform: translateY(-50%);
-      z-index: 2; // Assurez-vous que les nuages restent en avant-plan
-  
-      img {
-        display: block;
-        max-width: none; // Empêche le redimensionnement automatique
-        height: auto; // Gardez l'aspect naturel
+        height:auto;
+        object-fit: cover;        
       }
     }
   
     .grand-nuage {
-      width: 300px; // Ajustez la taille de l'image du grand nuage
-      right: -200px; // Position de départ hors de l'écran
-
+      position: absolute;
+      top: 10px; // Ajustez selon l'emplacement initial des nuages
+      right: 1px;
+      transform: translateY(-50%);
+      z-index: 2; // Assurez-vous que les nuages restent en avant-plan
+      max-width: none; // Empêche le redimensionnement automatique
+      height: auto; // Gardez l'aspect naturel
     }
   
+    
     .petit-nuage {
-      width: 200px; // Ajustez la taille de l'image du petit nuage
-      right: 0px; // Position de départ à l'intérieur de l'écran
+      position: absolute;
+      top: 1px; // Ajustez selon l'emplacement initial des nuages
+      right: 1px;
+      transform: translateY(-50%);
+      z-index: 2; // Assurez-vous que les nuages restent en avant-plan
+      max-width: none; // Empêche le redimensionnement automatique
+      height: auto; // Gardez l'aspect naturel
     }
   }
+}
+  
+  
   
   
