--- a/wp-content/themes/foce-child/scss/_section-lieu-mouvement-nuage.scss
+++ b/wp-content/themes/foce-child/scss/_section-lieu-mouvement-nuage.scss
@@ -1,43 +1,43 @@
-#story{ 
 
-article#place {
-    
-    .parallax-background {
-      position: relative;
-      width: 1473px;
-      height: 699px;
-      overflow: hidden;
+.story{
+
+#place {
+
+  background-image: none;
+  position: relative;
+  max-height: 699px;
+  max-width: 1480px;
+  margin-left: 0;
       
+  #image-fond {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
 
-      img{
-        width: 100%;
-        height:auto;
-        object-fit: cover;        
+      #grand-nuage {
+    position: absolute;
+    top: 61px;
+    right: -725px;
+    z-index: 2;
+    opacity: 0.3;
+      }
+
+      #petit-nuage {
+        position: absolute;
+        bottom: 372px;
+        right: 55px;
+        z-index: 2;
+        opacity: 0.2;
       }
     }
-  
-    .grand-nuage {
-      position: absolute;
-      top: 10px; // Ajustez selon l'emplacement initial des nuages
-      right: 1px;
-      transform: translateY(-50%);
-      z-index: 2; // Assurez-vous que les nuages restent en avant-plan
-      max-width: none; // Empêche le redimensionnement automatique
-      height: auto; // Gardez l'aspect naturel
-    }
-  
-    
-    .petit-nuage {
-      position: absolute;
-      top: 1px; // Ajustez selon l'emplacement initial des nuages
-      right: 1px;
-      transform: translateY(-50%);
-      z-index: 2; // Assurez-vous que les nuages restent en avant-plan
-      max-width: none; // Empêche le redimensionnement automatique
-      height: auto; // Gardez l'aspect naturel
-    }
   }
-}
+
+  
   
   
   
